updates from legacy img path, fixes header overflow

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -30,6 +30,7 @@ h1
   -ms-transform scale(1, -1)
   transform scale(1, -1)
   text-transform uppercase
+  overflow hidden
 
 h1 a 
   color #000
@@ -217,5 +218,7 @@ footer
       width auto
     p
       padding 0.9em 1.8em
+  a.btn
+    padding: 30px 0
 
 @import '_helpers'
